# oidc-rs

./: Cargo.toml  README.md
src/client/: discovery.rs  mod.rs
src/providers/: mod.rs
src/providers/google/: constants.rs  mod.rs
